fix Add render.yaml for deployment configuration

--- a/render.yaml
+++ b/render.yaml
@@ -18,9 +18,12 @@ services:
           name: pet-ai-redis
           property: connectionString
       - key: GEMINI_API_KEY
-        sync: false # Render 대시보드에서 직접 입력
+        sync: false
       - key: DATABASE_URL
-        sync: false # Render 대시보드에서 직접 입력
+        fromService:
+          type: psql
+          name: pet-ai-db
+          property: connectionString
 
   # 2. 백그라운드 워커 서비스 (RQ)
   - type: worker
@@ -40,10 +43,20 @@ services:
       - key: GEMINI_API_KEY
         sync: false
       - key: DATABASE_URL
-        sync: false
+        fromService:
+          type: psql
+          name: pet-ai-db
+          property: connectionString
 
   # 3. Redis 데이터베이스 (작업 큐)
   - type: redis
     name: pet-ai-redis
     plan: free # 무료 플랜 사용
     ipAllowList: [] # 같은 Render 계정 내 서비스들의 접근을 허용
+
+  # 4. PostgreSQL 데이터베이스
+  - type: psql
+    name: pet-ai-db
+    plan: free # 무료 플랜 사용
+    # 데이터베이스 버전이 중요할 경우 아래 주석을 해제하고 버전을 명시하세요.
+    # postgresql_version: 15
