--- a/render.yaml
+++ b/render.yaml
@@ -15,32 +15,10 @@ services:
     env: python
     plan: free # 무료 플랜 사용
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app"
+    startCommand: "honcho start"
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.4 # 사용하시는 파이썬 버전에 맞게 조절
-      - key: REDIS_URL
-        fromService:
-          type: redis
-          name: pet-ai-redis
-          property: connectionString
-      - key: GEMINI_API_KEY
-        sync: false
-      - key: DATABASE_URL
-        fromDatabase:
-          name: pet-ai-db
-          property: connectionString
-
-  # 2. 백그라운드 워커 서비스 (RQ)
-  - type: worker
-    name: pet-ai-worker
-    env: python
-    plan: free # 무료 플랜 사용
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "rq worker"
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.4
       - key: REDIS_URL
         fromService:
           type: redis
