--- a/render.yaml
+++ b/render.yaml
@@ -11,21 +11,6 @@ services:
     startCommand: "python -m waitress --port=$PORT app:app"
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.4 # 사용하시는 파이썬 버전에 맞게 조절
-      - key: REDIS_URL
-        fromService:
-          type: redis
-          name: pet-ai-redis
-          property: connectionString
+        value: 3.11.4
       - key: GEMINI_API_KEY
         sync: false
-      - key: DATABASE_URL
-        fromDatabase:
-          name: pet-ai-db
-          property: connectionString
-
-  # 2. Redis 데이터베이스 (작업 큐)
-  - type: redis
-    name: pet-ai-redis
-    plan: free # 무료 플랜 사용
-    ipAllowList: [] # 같은 Render 계정 내 서비스들의 접근을 허용
