--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,10 @@
 # render.yaml
 
+databases:
+  - name: pet-ai-db
+    plan: free
+    # postgresqlVersion: 15 # 필요 시 주석 해제
+
 services:
   - type: web
     name: pet-ai-web
@@ -12,3 +17,7 @@ services:
         value: 3.11.4
       - key: GEMINI_API_KEY
         sync: false
+      - key: DATABASE_URL
+        fromDatabase:
+          name: pet-ai-db
+          property: connectionString
