fix: Rename Procfile.txt to Procfile

--- a/render.yaml
+++ b/render.yaml
@@ -11,6 +11,7 @@ services:
     env: python
     plan: free
     buildCommand: "pip install -r requirements.txt"
+    startCommand: "waitress --port=$PORT app:app"
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.4
