refactor: Switch to gunicorn for deployment

--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
     name: pet-ai-web
     env: python
     plan: free
-    buildCommand: "pip install -r requirements.txt"
+    buildCommand: "pip install --no-cache-dir -r requirements.txt"
     startCommand: "gunicorn app:app"
     envVars:
       - key: PYTHON_VERSION
