--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,6 @@ services:
     env: python
     plan: free
     buildCommand: "pip install --no-cache-dir -r requirements.txt"
-    startCommand: "gunicorn app:app"
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.4
@@ -21,3 +20,12 @@ services:
         fromDatabase:
           name: pet-ai-db
           property: connectionString
+      - key: RQ_REDIS_URL
+        fromService:
+          type: redis
+          name: pet-ai-redis
+          property: connectionString
+  - type: redis
+    name: pet-ai-redis
+    plan: free
+    ipAllowList: []
